# mcp-systems

./: .editorconfig  .env.example  .gitignore  .pre-commit-config.yaml  ARCHITECTURE.md  CHANGELOG.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  docker-compose.yml  pyproject.toml  requirements.txt
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: ci.yml  release.yml
concept/: README.md
concept/docs/: 01_introduction.md  02_architecture.md  03_protocol.md  04_transports.md  05_tools.md  06_resources.md  07_prompts.md  08_sampling.md  09_roots.md  10_server_lifecycle.md  11_client_lifecycle.md  12_security.md  13_error_handling.md  14_testing.md  15_advanced_patterns.md
concept/implementations/: 01_hello_world_server.py  02_tools_server.py  03_resources_server.py  04_prompts_server.py  05_sampling_server.py  06_multi_capability_server.py  07_client_example.py  08_testing_example.py  requirements.txt
configs/: default.yaml  production.yaml  test.yaml
deploy/: Dockerfile
deploy/kubernetes/: configmap.yaml  deployment.yaml  service.yaml
deploy/monitoring/: prometheus.yml
docs/: 01_conceptual_foundation.md  02_system_architecture.md  03_module_system.md  04_memory_system.md  05_api_reference.md  06_deployment.md  07_observability.md  08_security.md  09_scalability.md
docs/examples/: 01_curl_examples.md  02_python_sdk.md
scripts/: generate_keys.py  health_check.py  quickstart.py  register_module.py
src/: __init__.py
src/api/: __init__.py  dependencies.py  main.py
src/api/middleware/: __init__.py  auth.py  logging.py  rate_limit.py
src/api/routers/: __init__.py  context.py  health.py  memory.py  modules.py
src/api/schemas/: __init__.py  common.py  context.py  memory.py  modules.py
src/core/: __init__.py  context_manager.py  orchestrator.py  registry.py  types.py
src/memory/: __init__.py  base.py  long_term.py  manager.py  short_term.py
src/modules/: __init__.py  base.py
src/modules/plugins/: __init__.py  echo.py  memory_retriever.py  summarizer.py
src/utils/: __init__.py  config.py  exceptions.py  logger.py  metrics.py  security.py
tests/: conftest.py
tests/integration/: test_end_to_end.py
tests/unit/: test_api.py  test_context_manager.py  test_memory.py  test_modules.py  test_orchestrator.py  test_security.py
