[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "mcp-system"
version = "0.1.0"
description = "Production-grade Model Context Protocol platform for AI systems"
readme = "README.md"
license = { file = "LICENSE" }
authors = [{ name = "MCP System Contributors" }]
requires-python = ">=3.11"
keywords = ["mcp", "model-context-protocol", "ai", "llm", "agents", "context-management"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

dependencies = [
    # Web framework
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "python-multipart>=0.0.12",
    # Data validation
    "pydantic>=2.9.0",
    "pydantic-settings>=2.6.0",
    # Async HTTP
    "httpx>=0.28.0",
    "aiohttp>=3.11.0",
    # Redis
    "redis[hiredis]>=5.2.0",
    # Vector DB
    "qdrant-client>=1.12.0",
    # Embeddings
    "openai>=1.57.0",
    "sentence-transformers>=3.3.0",
    # Auth
    "python-jose[cryptography]>=3.3.0",
    "passlib[bcrypt]>=1.7.4",
    # Observability
    "structlog>=24.4.0",
    "prometheus-client>=0.21.0",
    "opentelemetry-api>=1.29.0",
    "opentelemetry-sdk>=1.29.0",
    "opentelemetry-instrumentation-fastapi>=0.50b0",
    # Rate limiting
    "slowapi>=0.1.9",
    # Config
    "python-dotenv>=1.0.1",
    "pyyaml>=6.0.2",
    # Utilities
    "tenacity>=9.0.0",
    "orjson>=3.10.0",
    "cryptography>=43.0.0",
    "cachetools>=5.5.0",
    "tiktoken>=0.8.0",
    "packaging>=24.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=6.0.0",
    "pytest-mock>=3.14.0",
    "pytest-timeout>=2.3.0",
    "httpx>=0.28.0",   # for TestClient
    "fakeredis[aioredis]>=2.26.0",
    "black>=24.10.0",
    "ruff>=0.8.0",
    "mypy>=1.13.0",
    "isort>=5.13.0",
    "pre-commit>=4.0.0",
    "types-redis>=4.6.0",
    "types-pyyaml>=6.0.12",
    "types-passlib>=1.7.7",
    "types-python-jose>=3.3.4",
]
docs = [
    "mkdocs>=1.6.0",
    "mkdocs-material>=9.5.0",
    "mkdocstrings[python]>=0.27.0",
]

[project.scripts]
mcp-server = "src.api.main:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]

# =============================================================================
# Ruff — linting
# =============================================================================
[tool.ruff]
target-version = "py311"
line-length = 100
src = ["src", "tests"]

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "N",   # pep8-naming
    "UP",  # pyupgrade
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "SIM", # flake8-simplify
    "TCH", # flake8-type-checking
    "ANN", # flake8-annotations (partial)
    "S",   # flake8-bandit (security)
    "RUF", # ruff-specific
]
ignore = [
    "ANN101", # self annotation
    "ANN102", # cls annotation
    "ANN401", # Any allowed in some places
    "S101",   # assert ok in tests
    "B008",   # function calls in defaults (FastAPI Depends)
]

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["S", "ANN"]
"src/api/**" = ["B008"]

# =============================================================================
# Black — formatting
# =============================================================================
[tool.black]
line-length = 100
target-version = ["py311", "py312"]
include = '\.pyi?$'

# =============================================================================
# isort — import ordering
# =============================================================================
[tool.isort]
profile = "black"
line_length = 100
known_first_party = ["src"]

# =============================================================================
# mypy — type checking
# =============================================================================
[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true
plugins = ["pydantic.mypy"]
exclude = ["tests/", "deploy/"]

[[tool.mypy.overrides]]
module = ["sentence_transformers.*", "qdrant_client.*", "slowapi.*"]
ignore_missing_imports = true

# =============================================================================
# pytest
# =============================================================================
[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = [
    "-v",
    "--tb=short",
    "--strict-markers",
]
markers = [
    "slow: marks tests as slow (deselect with '-m not slow')",
    "integration: marks integration tests",
    "unit: marks unit tests",
]
timeout = 30

# =============================================================================
# Coverage
# =============================================================================
[tool.coverage.run]
source = ["src"]
omit = ["*/tests/*", "*/migrations/*", "*/__init__.py"]
branch = true

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise NotImplementedError",
    "if TYPE_CHECKING:",
    "pass",
]
show_missing = true
fail_under = 80
